[package]
name    = "golden-axe-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url                = "2.2.2"
axum               = "0.4.2"
anyhow             = "1.0.51"
dotenv             = "0.15.0"
tracing            = "0.1.34"
mod_use            = "0.2.0"
if_chain           = "1.0.2"
tokio-stream       = "0.1.8"
tracing-subscriber = "0.3.11"
teloxide           = { version = "0.5", features = ["auto-send", "macros", "rustls"] }
tokio              = { version = "1.3", features = ["rt-multi-thread", "macros", "signal"] }

[[bin]]
name = "golden-axe"
path = "src/main.rs"
