[package]
name     = "golden-axe-rs"
version  = "0.1.0"
edition  = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url                = "2.2.2"
tap                = "1.0.1"
sled               = "0.34.7"
serde              = "1.0.137"
dotenv             = "0.15.0"
tracing            = "0.1.34"
mod_use            = "0.2.0"
color-eyre         = "0.6.1"
serde_with         = "1.13.0"
tracing-subscriber = "0.3.11"
teloxide           = { version = "0.9", features = ["auto-send", "macros", "ctrlc_handler", "rustls"], default-features = false }
tokio              = { version = "1.18", features = ["rt-multi-thread", "macros", "signal"] }
figment            = { version = "0.10.6", features = ["env"] }
hyper = { version = "0.14.19", features = ["http1", "http2", "server"] }
futures = "0.3.21"

[[bin]]
name = "golden-axe"
path = "src/main.rs"

[dev-dependencies]
figment = { version = "0.10.6", features = ["test"] }
